--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
   min-height: 100vh;
   padding: 2em;
   background-color: silver;
-  background: url(https://wnmu.edu/wp-content/uploads/sites/36/2014/07/math-and-computer-science-bg-2.jpg)
+  background: url(background1.jpg)
     no-repeat center/cover;
 }
 .calcu {
