--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
   min-height: 100vh;
   padding: 2em;
   background-color: silver;
-  background: url(background1.jpg)
+  background-image: url(background1.jpg);
     no-repeat center/cover;
 }
 .calcu {
